# alarm-clock-cli

./: .gitignore  DEMO.md  DESIGN.md  README.md  pyproject.toml
alarm_clock/: __init__.py  __main__.py  cli.py  models.py  scheduler.py  sound.py  storage.py  timeparse.py
alarm_clock/commands/: __init__.py  foreground.py  manage.py  watch.py
tests/: test_cli.py  test_models.py  test_scheduler.py  test_storage.py  test_timeparse.py
